hphp/hack/test/typecheck/abstract_typeconsts/disable_patcs/partially_abstract.php.exp
File "partially_abstract.php", line 7, characters 7-7:
Class D does not correctly implement all required members  (Typing[4110])
File "partially_abstract.php", line 7, characters 17-17:
Some members are incompatible with those declared in type C
Read the following to see why:
File "partially_abstract.php", line 8, characters 14-14:
The assigned type of this type constant is inconsistent with its parent
File "partially_abstract.php", line 8, characters 27-29:
Expected int
File "partially_abstract.php", line 4, characters 27-34:
But got arraykey
