hphp/hack/test/typecheck/abstract_typeconsts/disable_patcs/partially_abstract.php
<?hh // strict

class C {
  const type T as mixed = arraykey;
}

class D extends C {
  const type T as mixed = int;
}
